src/objects/vlocity_ins__AssetCoverage__c.object
<CustomObject>
    <description>Represents the amount of risk or liability that is covered by the insurer for an individual or entity under the insurance policy. Coverages typically include deductibles, premiums or policy limits for auto, life or umbrella insurance policies. Master-detail child object of Policy (Asset).</description>
    <fields>
        <fullName>vlocity_ins__AggregateLimitAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Aggregate Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>InsuredItemCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageCode__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageNumber__c</fullName>
        <label>Coverage Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateDifference__c</fullName>
        <formula>vlocity_ins__EndDate__c - vlocity_ins__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeductibleAmount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeAmount__c</fullName>
        <description>Calculated fee on the coverage.</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__ImageId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image &amp; Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuredPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Party</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>InsuredPartyCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyAssetId__c</fullName>
        <label>Policy</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Coverages</relationshipLabel>
        <relationshipName>PolicyCoverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumAmount__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingSource__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__PricingSource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Source Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProRatedPremiumAmount__c</fullName>
        <description>Prorated amount of premium base on the remaining days of the modified Coverage</description>
        <label>Prorated Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coverage Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Policy Coverages</relationshipLabel>
        <relationshipName>PolicyCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Coverage Spec</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Policy Coverages</relationshipLabel>
        <relationshipName>PolicyCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedFeeAmount__c</fullName>
        <description>Prorated amount of fee based on the remaining days of the modified Coverage.</description>
        <label>Prorated Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProratedTaxAmount__c</fullName>
        <description>Prorated amount of tax based on the remaining days of the modified Coverage.</description>
        <label>Prorated Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>vlocity_ins__Product2Id__r.vlocity_ins__RecordTypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SingleLimitAmount__c</fullName>
        <label>Single Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxAmount__c</fullName>
        <description>Calculated tax on the coverage.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the coverage.</description>
        <formula>vlocity_ins__TaxAmount__c + vlocity_ins__FeeAmount__c + vlocity_ins__PremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalProratedAmount__c</fullName>
        <description>Total prorated taxes, fees, and price for the coverage.</description>
        <formula>vlocity_ins__ProratedTaxAmount__c + vlocity_ins__ProratedFeeAmount__c + vlocity_ins__ProRatedPremiumAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prorated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Peril</fullName>
                </value>
                <value>
                    <fullName>Rider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Policy Coverage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>